- basic structure and project setup

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less"
+              "src/styles/styles.less",
+              "src/styles/sb-admin-2.css"
             ],
             "scripts": []
           },
